--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,49 @@
+altgraph==0.17
+auto-py-to-exe==2.10.0
 beautifulsoup4==4.9.3
+bottle==0.12.19
+bottle-websocket==0.2.9
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
 cryptography==3.4.7
+Eel==0.12.4
 et-xmlfile==1.1.0
 fake-useragent==0.1.11
+Flask==2.0.1
 flatten-json==0.1.13
+future==0.18.2
+gevent==21.1.2
+gevent-websocket==0.10.1
+greenlet==1.1.0
 httmock==1.4.0
 idna==2.10
+itsdangerous==2.0.1
+Jinja2==3.0.1
 lxml==4.6.3
+MarkupSafe==2.0.1
 numpy==1.20.2
 openpyxl==3.0.7
 pandas==1.2.4
+pefile==2021.5.24
 psutil==5.8.0
 pycparser==2.20
+pyinstaller==4.5
+pyinstaller-hooks-contrib==2021.2
 pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 python-dotenv==0.18.0
 pytz==2021.1
+pywin32-ctypes==0.2.0
 requests==2.25.1
 selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
 termcolor==1.1.0
 urllib3==1.26.4
+Werkzeug==2.0.1
+whichcraft==0.6.1
+zope.event==4.5.0
+zope.interface==5.4.0
