--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ future==0.18.2
 gevent==21.1.2
 gevent-websocket==0.10.1
 greenlet==1.1.0
+gunicorn==20.1.0
 httmock==1.4.0
 idna==2.10
 itsdangerous==2.0.1
