--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Eel==0.12.4
 et-xmlfile==1.1.0
 fake-useragent==0.1.11
 Flask==2.0.1
+Flask-Cors==3.0.10
 Flask-Executor==0.9.4
 flatten-json==0.1.13
 future==0.18.2
